# Electronic-Tables

./: .gitignore  BlankCell.cpp  BlankCell.h  CMakeLists.txt  Cell.cpp  Cell.h  DoubleCell.cpp  DoubleCell.h  FileCommand.cpp  FileCommand.h  FormulaCell.cpp  FormulaCell.h  IntCell.cpp  IntCell.h  README.md  Recognition.cpp  Recognition.h  SRow.cpp  SRow.h  Seminar  Spreadsheet.cpp  Spreadsheet.h  StringCell.cpp  StringCell.h  main.cpp  test.txt
